# permutat

./: Makefile.am  PackageInfo.g  README.md  autogen.sh  configure.ac  init.g  makedoc.g  read.g
gap/: permutat.gd  permutat.gi
src/: permutat.cc
tst/: testall.g
